discussion/kv_engine/148719/148719_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

stats: Add WriteCacheflush wait and execute histograms

Change-Id: I04a41ef6d8069bcf92e91c1883c8def107acea3f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-17 18:28:13.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-17 20:02:55.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29458/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29458/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34322/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34322/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7730/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7730/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8350/ : FAILURE

Compile error at [2021-03-17T18:31:58.804Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8350/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9434/ : FAILURE

Compile error at [2021-03-17T19:29:45.465Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9644/ : FAILURE

Compile error at [2021-03-17T19:41:39.852Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9644/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17199/ : FAILURE

Compile error at [2021-03-17T19:59:29.255Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17199/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9289/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-03-20 00:01:28.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
